# rusty-json

./: .gitignore  Cargo.toml  Justfile  README.md  benchmark.py  pyproject.toml
python/rusty_json/: __init__.py  rusty_json.pyi
src/: lib.rs  main.rs  parser.rs
