[package]
name = "rusty-json"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_json"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"

[dependencies]
anyhow = "1.0.102"
pyo3 = "0.27.0"
